feat(web3): Add Phase 1 - Web3 Foundation Layer
PHASE 1: Web3 Foundation (Minimal but Correct)
----------------------------------------------

Added blockchain integration foundation for GramPulse:

1. Dependencies:
   - Added web3dart ^2.7.3 for Ethereum/Optimism interaction
   - Added flutter_dotenv ^5.1.0 for environment configuration

2. Network Configuration (network_config.dart):
   - Optimism Mainnet support (Chain ID: 10)
   - Optimism Sepolia Testnet support (Chain ID: 11155420)
   - EAS contract addresses for attestations
   - GramPulse-specific schema definitions

3. Web3 Configuration (web3_config.dart):
   - Environment-based configuration (dev/staging/prod)
   - RPC URL configuration
   - IPFS gateway settings
   - Attestation service URL
   - Feature flags for Web3 enable/disable

4. Web3 Service (web3_service.dart):
   - Singleton service pattern
   - Read-only provider connection
   - Chain ID verification
   - Attestation verification (placeholder)
   - Block explorer URL generation
   - Graceful offline handling

5. Environment Setup:
   - .env.example template with all config options
   - .env added to .gitignore for security
   - Default development .env created

Key Design Decisions:
- NO wallet UI for villagers (abstracted)
- Read-only blockchain access in Flutter
- All writes go through backend middleware
- Offline-first: Web3 can be disabled

Next: Phase 2 - Backend Attestation Middleware

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ dependencies:
   fl_chart: ^1.0.0
   uuid: ^4.0.0
   typed_data: ^1.3.2
+  
+  # Web3 / Blockchain
+  web3dart: ^2.7.3
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +91,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+    - .env
 
 # Flutter Launcher Icons Configuration
 flutter_launcher_icons:
