--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # Network
   dio: ^5.3.3
   http: ^1.5.0
+  http_parser: ^4.0.2
   connectivity_plus: ^5.0.1
   cached_network_image: ^3.3.0
   url_launcher: ^6.1.14
